--- a/resolver-overview.mdx
+++ b/resolver-overview.mdx
@@ -5,7 +5,7 @@ description: Create resolvers to compute feature values.
 
 ---
 
-Resolvers are Python functions that compute your feature values.
+Resolvers define how to compute your feature values.
 Resolvers [take as input](/docs/resolver-inputs)
 features that they need to know to run, and
 [resolve the values](/docs/resolver-outputs)
