--- a/what-is-chalk.mdx
+++ b/what-is-chalk.mdx
@@ -15,10 +15,11 @@ import { PyDiffEditor } from '@/components/Editor'
 
 <DocsHero />
 
-Chalk enables innovative machine learning teams to focus on building
-the unique products and models that make their business stand out.
-Behind the scenes, Chalk seamlessly handles data infrastructure with
-a best-in-class developer experience. Here’s how it works.
+Chalk is a feature store that enables innovative machine learning teams
+to focus on building the unique products and models that make their
+business stand out. Behind the scenes, Chalk seamlessly handles
+data infrastructure witha best-in-class developer experience.
+Here’s how it works.
 
 ---
 
