--- a/setup-guide.mdx
+++ b/setup-guide.mdx
@@ -164,4 +164,8 @@ Some users define [cron schedules](https://docs.chalk.ai/docs/resolver-cron)for 
 and [set staleness values](https://docs.chalk.ai/docs/feature-caching) on different features to
 ensure that the data they query falls within their requirements for freshness. The data world is your oyster!
 
-But, as always, if you would like guidance on how to configure that oyster, please reach out in your support channel! 
+But, as always, if you would like guidance on how to configure that oyster, please reach out in your support channel!
+
+## Further Resources
+
+For a detailed tutorial on how to build a fraud model using Chalk, [see here](https://docs.chalk.ai/docs/fraud-1).
