--- a/aws-cloud-deployment.mdx
+++ b/aws-cloud-deployment.mdx
@@ -191,7 +191,7 @@ kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: chalk-management-role
-  namespace: ns-tmnmc9beyujew
+  namespace: <namespace> # replace <namespace> with your actual namespace
 rules:
   - apiGroups:
       - ""
