--- a/feature-dev.mdx
+++ b/feature-dev.mdx
@@ -1,5 +1,5 @@
 ---
-title: Feature Development Lifecycle
+title: Writing Features
 description: Developing, testing, deploying, and backfilling a new feature
 ---
 
