--- a/fraud-1.mdx
+++ b/fraud-1.mdx
@@ -1,5 +1,5 @@
 ---
-title: Overview
+title: Fraud Detection on Chalk Tutorial
 description: Build a feature pipeline for fraud detection.
 published: true
 ---
