--- a/notebook-tutorial.mdx
+++ b/notebook-tutorial.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tutorial
+title: Jupyter Notebook Tutorial
 description: Work through an example using Chalk in a Jupyter notebook
 published: true
 ---
@@ -270,7 +270,7 @@ we alias `created_at` to `authorized_at` for `Authorization`
 
 ### SQL Resolvers
 
-We will use the [`%%resolver`](/docs/notebook-magics#resolver) magic to define SQL resolvers in our notebook.
+We will use the [`%%resolver`](/docs/notebook-development#resolver) magic to define SQL resolvers in our notebook.
 
 ```sql notebook.ipynb
 %%resolver get_merchant_features
