--- a/feature-types.mdx
+++ b/feature-types.mdx
@@ -61,7 +61,7 @@ Struct types should be used for objects that don't have ids. If an object has an
 
 ### Dataclass
 
-You can use any `dataclass` as a struct feature. 
+You can use any `dataclass` as a struct feature.
 
 ```python
 @dataclass
@@ -117,11 +117,11 @@ class Book:
 
 ## Document
 
-Both [dataclass](/docs/feature-types#dataclass) and [Pydantic](/docs/feature-types#pydantic-models) 
-structs are implemented using the [PyArrow](https://arrow.apache.org/docs/python/index.html) 
-serialization format, a high-performance schema for data serialization.  
+Both [dataclass](/docs/feature-types#dataclass) and [Pydantic](/docs/feature-types#pydantic-models)
+structs are implemented using the [PyArrow](https://arrow.apache.org/docs/python/index.html)
+serialization format, a high-performance schema for data serialization.
 This data is stored "value only", i.e. without keys, so any change to these structs over time will invalidate historical data.
-To support feature values where the schema changes over time, we introduced the `Document` struct type.   
+To support feature values where the schema changes over time, we introduced the `Document` struct type.
 Documents are serialized as JSON and supports changes to schema over time, at the cost of a small performance penalty.
 
 ```python
@@ -165,8 +165,8 @@ class Document:
     content: str
     # Chalk knows that text-embedding-ada-002 has 1536 dimensions
     embedding: Vector = embedding(
-        feature="content", 
-        provider="openai", 
+        feature="content",
+        provider="openai",
         model="text-embedding-ada-002"
     )
 ```
@@ -179,7 +179,7 @@ from chalk import Vector
 
 @features
 class Document:
-    # Defines a vector with 1536 dimensions that will be persisted with 32 bit precision 
+    # Defines a vector with 1536 dimensions that will be persisted with 32 bit precision
     embedding: Vector["f32", 1536]
 ```
 
@@ -223,4 +223,31 @@ class Book:
         encoder=lambda x: dict(foo=x.foo, bar=x.bar),
         decoder=lambda x: CustomStruct(**x),
     )
+```
+
+## Feature Time
+
+By default, features are timestamped by the time at which they are computed. However, you can override
+this behavior by providing timestamps from your data source. This functionality can be helpful when working
+with an event store or timestamped API. The first step is to add a FeatureTime attribute to your feature set.
+
+To add a custom feature time to your reature Set, you can either
+add a feature named 'ts' or, if you want your timestamp feature to have a custom name,
+you can use the FeatureTime type.
+
+```python
+from chalk.features import features, FeatureTime
+
+@features
+class User:
+ts: datetime
+```
+
+```python
+from chalk.features import features, FeatureTime
+
+@features
+class User:
+timestamp: FeatureTime
+The class FeatureTime is a datetime.datetime with a typing.Annotation applied.
 ```
