no breaking things

--- a/faq.mdx
+++ b/faq.mdx
@@ -3,6 +3,8 @@ title: Frequently Asked Questions
 description: A collection of questions frequently asked by customers
 ---
 
+import {RBACDiagram} from '@/components/ArchitectureDiagram'
+
 ---
 
 ## Getting support
@@ -25,8 +27,7 @@ BigQuery, Snowflake, or other data warehouses.
 
 Yes! Within the dashboard you can assign roles with different permissions to different users. The default roles
 available are  shown below.
-
-![rbac](./img/rbac.png  "RBAC")
+<RBACDiagram/>
 
 ### What are the necessary steps for us to get Chalk in our system?
 
