--- a/lifecycle.mdx
+++ b/lifecycle.mdx
@@ -1,5 +1,5 @@
 ---
-title: Writing Features
+title: Feature Development Lifecycle
 description: Developing, testing, deploying, and backfilling a new feature
 ---
 
